REGRESSION (r232991): Switching to dark mode in Mail does not update the message view to be transparent https://bugs.webkit.org/show_bug.cgi?id=188891 rdar://problem/42344352

Reviewed by Simon Fraser.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::rootBackgroundColorOrTransparencyChanged):
Don't return early when m_layerForOverhangAreas is null to avoid skipping
setRootLayerConfigurationNeedsUpdate() and scheduleCompositingLayerUpdate().


Canonical link: https://commits.webkit.org/207456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239414 268f45cc-cd09-0410-ab3c-d52691b4dbfc